--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "a backend project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
-  "keywords": ["javascript","backend"],
+  "keywords": [
+    "javascript",
+    "backend"
+  ],
   "author": "Satyarth Shukla",
   "license": "ISC",
-  "type": "module"
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
